--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://giasinguyen.github.io/Price-Table-Editor",
   "name": "pricelist",
   "private": true,
   "version": "0.0.0",
