Fix homepage URL in package.json by adding a trailing slash

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pricelist",
-  "homepage": "https://giasinguyen.github.io/Price-Table-Editor",
+  "homepage": "https://giasinguyen.github.io/Price-Table-Editor/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
